css/bootstrap-override.css
/* Mimicing GitHub's font styling, but puttin Segou UI higher (the Grasshopper font) for Windows users */
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5;
  font-weight: 300;
  font-style: normal;
  font-variant: normal;
  color: #111;
  background-color: white;
  -webkit-text-size-adjust: 100%;
}

.tab-content .tab-pane {
  display: none;
}

.site-nav .page-link {
  color:#337ab7
}

.tab-content .active {
  display: block;
}

.bs-callout {
    padding: 20px;
    margin: 20px 0;
    border: 1px solid #eee;
    border-left-width: 5px;
    border-radius: 3px;
}

.bs-callout-danger {
    border-left-color: #ce4844;
}

.guide_byline {
    font-style: italic;
    font-size: 14px;
}

/* Search input form and search results styling */

#sitesearch {
    float:right;
    margin-left:20px;
    margin-top:6px;
    margin-right:0px;
    margin-bottom:0px;
}

.searchBox {
	background:white;
	background-repeat: no-repeat;
	padding-left: 20px;
	border-style: solid;
	border-width: 1px;
	border-color: white;
	cursor: pointer;
  background-image: url('/images/searchicon.png');
	vertical-align: middle;
    line-height: 18px;
    padding-bottom:15px;
    padding-top: 2px;
    margin-top:4px;
    height:25px;
}
.searchBoxBeta {
	background:white;
	border-style: solid;
	border-width: 1px;
	border-color: white;
	cursor: pointer;
	vertical-align:middle;
}

#heading #cse-search-boxBeta {
    padding:0;
    margin: 0;
    position: absolute;
    right: 0;
    bottom:16px;
    z-index: 100;
}


#cref {
	margin-top:12px;
    line-height:24px;
}

#searchtext {
	height:22px;
	padding:0px;
    padding-top:2px;
	line-height:18px;
}

#cse-search-results iframe {
	height : 1150px;
}



/* kbd overrides */
kbd
{
    -moz-border-radius:3px;
    -moz-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
    -webkit-border-radius:3px;
    -webkit-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
    background-color:#f7f7f7;
    border:1px solid #ccc;
    border-radius:3px;
    box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
    color:#333;
    display:inline-block;
    font-family:Arial,Helvetica,sans-serif;
    font-size:11px;
    line-height:1.4;
    margin:0 .1em;
    padding:.1em .6em;
    text-shadow:0 1px 0 #fff;
}

/*
##############################################################################
## Image float overrides. Allows to wrap text around images.
## {: .float-img-right}
## To finish the wrapping, insert this text under next block object:
## {: .clear-img}
## That assures the next block element will stay clear of the image.
##############################################################################
*/
.float-img-right {
  float: right;
  padding-left: 25px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.float-img-left {
  float: left;
  padding-right: 25px;
  padding-top: 5px;
  padding-bottom: 5px;
}
.clear-img {
  clear:both;
}

/*
##############################################################################
##  Index.md Page
##############################################################################
*/
.index_use_images {
/* Use only width to control an img-responsive img.  Bootstrap will float the height. */
	width:290px;
}
tbody.index_table tr td{
	vertical-align:middle;
}
.index_table_icon {
	width:32px;
	height:32px;
}
.index_table_primary_use {
	margin:10px;
	font-size:1.0em;
}

/*
##############################################################################
##  guides.md Page
##############################################################################
*/

.guide_icon {
	width:36px;
	height:36px;
}


/*
##############################################################################
##  bootstrap docs sidebar - table of contents (toc)
##############################################################################
*/

.toc-title {
  background: white;
}
.toc-header {
  background: white;
}
.toc-header .toc-subheader {
  background: white;
}
.fixed {
    position: fixed;
}


/* sidebar */
.bs-docs-sidebar {
    padding-left: 0px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.bs-docs-sidebar .nav {
  margin-left:0px;
}

.bs-docs-sidebar .nav .nav {
  /*margin-left:20px;*/
  /*padding-left:20px;*/
}

.bs-docs-sidebar .nav .nav .nav {
  /*margin-left:20px;*/
  /*padding-left:40px;*/
}

/*.bs-docs-sidebar .nav .nav .nav .nav {
  margin-left:20px;
}*/

.bs-docs-sidebar .nav>li {
  margin-top: 0;
}

/* title links */
.bs-docs-sidebar .nav>li>a {
    color: #999;
    border-left: 1px solid transparent;
    padding: 4px 20px 4px 18px;
    font-size: 13px;
    font-weight: 400;

}

/* nested links */
.bs-docs-sidebar .nav .nav>li>a {
    padding-top: 1px;
    padding-bottom: 1px;
    padding-left: 28px;
    font-size: 12px;
}

/* sub-nested links */
.bs-docs-sidebar .nav .nav .nav>li>a {
    /*padding-top: 1px;*/
    /*padding-bottom: 1px;*/
    padding-left: 38px;
    font-size: 10px;
}

/* sub-sub-nested links */
.bs-docs-sidebar .nav .nav .nav .nav>li>a {
    padding-top: 1px;
    padding-bottom: 1px;
    padding-left: 58px;
    font-size: 10px;
}

/* active & hover links */
.bs-docs-sidebar .nav>.active>a,
.bs-docs-sidebar .nav>li>a:hover,
.bs-docs-sidebar .nav>li>a:focus {
    /*color: #563d7c;*/
    color: #111;
    text-decoration: none;
    background-color: transparent;
    /*border-left-color: #563d7c;*/
    border-left-color: #111;
}

.bs-docs-sidebar .nav>.active>a {
  border-left: 2px solid #111
}

/* all active links */
.bs-docs-sidebar .nav>.active>a,
.bs-docs-sidebar .nav>.active:hover>a,
.bs-docs-sidebar .nav>.active:focus>a {
    font-weight: 700;
}
/* nested active links */
.bs-docs-sidebar .nav .nav>.active>a,
.bs-docs-sidebar .nav .nav>.active:hover>a,
.bs-docs-sidebar .nav .nav>.active:focus>a {
    font-weight: 500;
}

/* sub-nested active links */
.bs-docs-sidebar .nav .nav .nav>.active>a,
.bs-docs-sidebar .nav .nav .nav>.active:hover>a,
.bs-docs-sidebar .nav .nav .nav>.active:focus>a {
    font-weight: 500;
}

/* hide inactive nested list */
.bs-docs-sidebar .nav ul.nav {
    display: none;
}

/* show active nested list */
.bs-docs-sidebar .nav>.active>ul.nav {
    display: block;
}

@media screen and (max-width: 990px) { .bs-docs-sidebar {
    display: none;
} }

@media print {
  .bs-docs-sidebar {
    display: none;
  }
}


/*
##############################################################################
##  Multiline text tables 
##############################################################################
*/

.multiline {
	rule:rows;
	vertical-align:top; !important;
}

.multiline-cell td {
	padding:10px 5px;
	vertical-align:top; !important;
}


/*
##############################################################################
## RhinoScriptSyntax API docs
##############################################################################
*/

#rhinoscriptsyntax-api-docs .panel {
  margin: 0;
  background-color: inherit;
  background-image: none;
  border-radius: 0;
  border: none;
  box-shadow: none;
}
#rhinoscriptsyntax-api-docs .panel-heading {
  padding: 0 0 0 10px;
  border-radius: 0;
  background-color: inherit;
  border: none;
  box-shadow: none;
}

#rhinoscriptsyntax-api-docs .panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body {
  border-top: 0;
  border-bottom: 1px solid #ddd;
}

#rhinoscriptsyntax-api-docs .panel-group .panel p.p-ModuleName {
  margin: 20px 0 0 0;
}
#rhinoscriptsyntax-api-docs .panel-moduleFunction .docstring-panel {
  padding: 0 0 0 15px;
}

#rhinoscriptsyntax-api-docs .panel-moduleFunction .docstring-panel h5 {
  margin: 10px 0 2px 0;
}
#rhinoscriptsyntax-api-docs .panel-moduleFunction .docstring-panel h5 + div {
  padding: 0 0 0 15px;
}

#rhinoscriptsyntax-api-docs .panel-group .panel-heading a {
  font-size: 15px;
  line-height: inherit;
}
#rhinoscriptsyntax-api-docs .panel-body .seealso a {
  font-size: 12px;
  line-height: 1.0;
}
#rhinoscriptsyntax-api-docs .panel-body ul {
  list-style: none;
}

#rhinoscriptsyntax-api-docs .panel-moduleFunction .panel-heading .label {
  font-size: 50%;
}

/* .show conflicts with bootstrap */
#rhinoscriptsyntax-api-docs .docstring-panel .docstring-field .rss-show {
  display: inline;
}

#rhinoscriptsyntax-api-docs .docstring-panel .docstring-field .hide {
  display: none;
}

#rhinoscriptsyntax-api-docs pre.functionDescription {
  background-color: inherit;
  border: none;
}

